<resources>
    <string name="app_name">Vacation Days, Reworked</string>
    <string name="vacations">Vacations</string>
    <string name="settings">Settings</string>
    <string name="timeline">Timeline</string>
    <string name="calendar">Calendar</string>
    <string name="date_display">%s ➔ %s</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="vacation_name">Vacation name</string>
    <string name="description">Description</string>
    <string name="vacation_desc">Vacation description (Optional)</string>
    <string name="single_date">Single date</string>
    <string name="date_range">Date range</string>
    <string name="dont_update_dates">Don\'t update dates</string>
    <string name="is_sick_day">Is sick day</string>
    <string name="edit">Edit</string>
    <string name="edit_vacation">Edit vacation</string>
    <string name="edit_successful">Edit successful</string>
    <string name="add">Add</string>
    <string name="add_vacation">Add vacation</string>
    <string name="add_successful">Add successful</string>
    <string name="empty_name_error">Name cannot be empty</string>
    <string name="vacation_already_exists_error">A vacation with this name already exists</string>
    <string name="sick_day">Sick day</string>
    <string name="delete">Delete</string>
    <string name="delete_vacation">Delete vacation</string>
    <string name="delete_vacations_in_group">Delete vacations in this group</string>
    <string name="delete_vacation_confirmation">Do you really want to delete the vacation with name\n\n%s?\n\nThis action cannot be undone.</string>
    <string name="delete_vacations_in_group_confirmation">Do you really want to delete all vacations in %s?\nThis action cannot be undone.</string>
    <string name="delete_successful">Delete successful</string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>
    <string name="days_until_begin">%d days until beginning</string>
    <string name="begins_after_today">Begins after today</string>
    <string name="days_until_end">%d days until ending</string>
    <string name="ends_after_today">Ends after today</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <!-- Summary -->
    <string name="summary">Summary</string>
    <string name="summary_year">In %d, you have %d vacation days in total. Refer to the following list for specific months.</string>
    <string name="summary_month">%d vacation days out of %d</string>
    <string name="jan">January</string>
    <string name="feb">February</string>
    <string name="mar">March</string>
    <string name="apr">April</string>
    <string name="may">May</string>
    <string name="jun">June</string>
    <string name="jul">July</string>
    <string name="aug">August</string>
    <string name="sep">September</string>
    <string name="oct">October</string>
    <string name="nov">November</string>
    <string name="dec">December</string>
    <!-- Settings -->
    <string name="appearance">Appearance</string>
    <string name="behavior">Behavior</string>
    <string name="track_sick">Track sick days</string>
    <string name="track_sick_explanation">Whether the number of vacation days per year and month in Summary page includes sick days</string>
    <string name="appearance_settings">Appearance settings</string>
</resources>