<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="UnusedAttribute">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/days_until"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_edit"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/ripple"
        android:contentDescription="@string/edit"
        android:padding="12dp"
        android:src="@drawable/edit"
        android:tooltipText="@string/edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_delete"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/ripple"
        android:contentDescription="@string/delete"
        android:padding="12dp"
        android:src="@drawable/delete"
        android:tooltipText="@string/delete"
        app:layout_constraintEnd_toStartOf="@id/btn_edit"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_show_hide"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/ripple"
        android:contentDescription="@string/hide"
        android:padding="12dp"
        android:src="@drawable/visibility_off"
        android:tooltipText="@string/hide"
        app:layout_constraintEnd_toStartOf="@id/btn_delete"
        app:layout_constraintTop_toTopOf="parent" />

    <net.cachapa.expandablelayout.ExpandableLayout
        android:id="@+id/expand_vacation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_edit"
        app:el_expanded="true">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/details_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            app:contentPadding="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/vacation_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/vacation_range"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:gravity="center" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/sick_day_notice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:gravity="center"
                    android:text="@string/sick_day"
                    android:textColor="@android:color/holo_red_dark" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/vacation_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </net.cachapa.expandablelayout.ExpandableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

